test/invalid-syntax/58250_invalid_semantic_function_call/58250_invalid_semantic_function_call.agu
-- Author: 58250, Leonardo Monteiro

let add (a, b) : Int -> Int = a + b
let result = add(10)  --Missing parameter
